--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.19.1",
-    "gridsome": "^0.7.0"
+    "gridsome": "^0.7.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2"
   }
 }
