--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@gridsome/source-filesystem": "^0.6.2",
+    "@gridsome/transformer-remark": "^0.4.0",
     "axios": "^0.19.1",
     "gridsome": "^0.7.0",
     "stylus": "^0.54.7",
