--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "gridsome": "^0.7.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2"
+  },
+  "devDependencies": {
+    "style-resources-loader": "^1.3.3",
+    "vue-style-loader": "^4.1.2"
   }
 }
