--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@gridsome/transformer-remark": "^0.4.0",
     "axios": "^0.19.1",
     "gridsome": "^0.7.0",
+    "leancloud-storage": "^4.3.1",
     "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "valine": "^1.3.10"
   },
   "devDependencies": {
     "style-resources-loader": "^1.3.3",
